# threads_exp

./: ArrayQueue.c  ArrayQueue.h  CMakeLists.txt  CRTurnQueue.hpp  CircularQueue.c  CircularQueue.h  EventCount.hpp  HazardPointers.hpp  LCRQueue.hpp  MSQueue.hpp  README.md  SCRQueue.hpp  align.h  atomic.h  benchmark.c  benchmark.h  bits.h  cpumap.h  delay.h  main.c  main.cpp  malloc.c  malloc.h  pairwise.c  pipe.c  pipe.h  primitives.h  producer_consumer_pthreads.c  queue.c  queue.h  shm_malloc.h  sockets.c  sockets.h  utils.c  utils.h  wfqueue.c  wfqueue.h
benchmarks/: atomic.h  benchmark.c  benchmark.h  futex.c  futex.h  futex_local.c  malloc.h  pipe.c  pipe.h  posix_mutex.c  posix_mutex.h  shm_malloc.h  signal_kill.c  signal_kill.h  sockets.c  sockets.h
